sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort: error: not found: value gnomeSort
		gnomeSort();
                ^AlgGnomeSort:2: error: not found: value gnomeSort
gnomeSort(){
^